Added FAQ skeleton

--- a/faq/index.html
+++ b/faq/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Temple FAQ & Audio</title>
+<link rel="stylesheet" href="https://unpkg.com/pico.css">
+<style>
+  body { max-width: 800px; margin: auto; padding: 2rem; }
+  audio { width: 100%; margin: 1rem 0; }
+  .faq { margin-bottom: 2rem; }
+</style>
+</head>
+<body>
+<h1>Temple FAQ & Audio Guide</h1>
 
+<h2>Listen to the Audio Guide</h2>
+<audio controls>
+  <source src="temple-audio.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+
+<div class="faq">
+  <h2>Q: What is the temple?</h2>
+  <p>A: [Your FAQ answer goes here]</p>
+</div>
+
+<div class="faq">
+  <h2>Q: How do I visit?</h2>
+  <p>A: [Your FAQ answer goes here]</p>
+</div>
+
+<!-- Repeat FAQ blocks as needed -->
+
+</body>
+</html>
