--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <h1>The Temple</h1>
-<a href="/faq/index.html" class="btn">FAQ & Audio Guide</a>
+<a href="faq/index.html" class="btn">FAQ & Audio Guide</a>
 <a href="https://instagram.com/yourhandle" class="btn">Instagram</a>
 <a href="https://youtube.com/yourchannel" class="btn">YouTube</a>
 </body>
