--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
     justify-content: center;
     position: relative;
     width: 100%;
-    max-width: 480px;
+    max-width: 95%;
+    box-sizing: border-box;
     margin: 0.7rem auto;
     padding: 1.5rem 1.5rem;
     font-size: 1.1rem;
