--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
     box-sizing: border-box;
     margin: 0.7rem auto;
     padding: 1.5rem 1.5rem;
+    padding-left: 45px;
     font-size: 1.1rem;
     font-family: 'Alegreya Sans', sans-serif;
 /*    font-weight: bold;*/
