--- a/index.html
+++ b/index.html
@@ -164,7 +164,9 @@
     <!-- Profile -->
     <img src="images/nomichaelhere-01.jpeg" alt="Profile Picture" class="profile-pic">
     <h1>@no.michael.here</h1>
-    <div class="bio">🜃 The ritual is stirring. Upon lighting of the first stone, the priest will give a public discourse. (22 down, 88 to go)↯</div>
+    <div class="bio">🜃 The temple waits. A living story you can enter. The 1st stone glows faintly:
+22 down, 88 to go.
+When it's lit, the priest will speak ↯</div>
 
     <!-- Social icons -->
     <div class="social-icons">
