--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     font-size: 1rem;
     margin: 0 auto;
     margin-bottom: 2rem;
-    max-width: 450px;
+    max-width: 400px;
     text-align: center;
   }
 
@@ -173,9 +173,8 @@
     <!-- Profile -->
     <img src="images/nomichaelhere-01.jpeg" alt="Profile Picture" class="profile-pic">
     <h1>@no.michael.here</h1>
-    <div class="bio">🜃 The temple waits. A living story you can enter. The 1st stone glows faintly:
-22 down, 88 to go.
-When it's lit, the priest will speak ↯</div>
+    <div class="bio">🜃 The temple waits. A living story you can enter. The first stone glows faintly:
+22 down, 88 to go. When it's lit, the priest will speak ↯</div>
 
     <!-- Social icons -->
     <div class="social-icons">
