--- a/index.html
+++ b/index.html
@@ -49,6 +49,19 @@
     z-index: 0;
   }
 
+  @media (max-width: 600px) {
+      .container {
+	  width: 100%;
+	  margin: 0;
+	  padding: 2rem 1rem;
+	  border-radius: 0px;
+      }
+
+      .overlay {
+	  border-radius: 0px;
+      }
+  }
+
   .content {
     position: relative;
     z-index: 1;
