--- a/index.html
+++ b/index.html
@@ -209,6 +209,10 @@
 	Temple Offering - $11
       </a>
 
+      <a href="/faq" class="btn">
+	FAQs About the Temple
+      </a>
+
       <a href="https://shop.michaelkorman.com/collection/parables-and-lore" class="btn">
         <img src="images/parables-and-lore.png" alt="">
 	Parables and Lore
