--- a/faq/index.html
+++ b/faq/index.html
@@ -22,7 +22,18 @@
     border-radius: 2rem;
     box-shadow: 0 0 20px rgba(0,0,0,0.3);
     backdrop-filter: blur(2px);
+    position: relative;
   }
+
+  @media (max-width: 600px) {
+      .faq-container {
+	  width: 100%;
+	  margin: 0;
+	  padding: 2rem 1rem;
+	  border-radius: 0px;
+      }
+  }
+
 
   .faq-section {
     margin-bottom: 2rem;
