--- a/index.html
+++ b/index.html
@@ -158,8 +158,14 @@
     position: absolute;
     left: 1rem;
     width: 45px;
-    height: 45px;
+  height: 45px;
     object-fit: contain;
+  }
+
+  .btn i {
+    position: absolute;
+    left: 1rem;
+    font-size: 2rem;
   }
 
   footer {
@@ -210,7 +216,8 @@
       </a>
 
       <a href="/faq" class="btn">
-	FAQs About the Temple
+	<i class="fas fa-question"></i>
+	<span>FAQs About the Temple</span>
       </a>
 
       <a href="https://shop.michaelkorman.com/collection/parables-and-lore" class="btn">
