Reordered some FAQ questions.

--- a/faq/index.html
+++ b/faq/index.html
@@ -103,12 +103,7 @@ _and_Personal_Mythology.m4a?rlkey=csg3vru0gx46npnot0fspaxhn&st=7tg7n8um&raw=1" t
     
     <div class="faq-section">
       <h2>Part 1</h2>
-         <div class="faq-item">
-        <h3>What’s “the stone”?</h3>
-        <div class="faq-answer">
-          <p>The “first stone” is a marker of progress in this world. There are 10 stones. Each demands a certain amount of money. When a stone gets its amount, it lights up, and we move to the next.</p>
-        </div>
-   </div>
+
 
    <div class="faq-item">
         <h3>Why $616?</h3>
@@ -215,8 +210,16 @@ _and_Personal_Mythology.m4a?rlkey=csg3vru0gx46npnot0fspaxhn&st=7tg7n8um&raw=1" t
         </div>
    </div>
 
-   <h2>Part 2</h2>
-      <div class="faq-item">
+   <h2>Temple Jargon</h2>
+   
+   <div class="faq-item">
+     <h3>What’s “the stone”?</h3>
+     <div class="faq-answer">
+       <p>The “first stone” is a marker of progress in this world. There are 10 stones. Each demands a certain amount of money. When a stone gets its amount, it lights up, and we move to the next.</p>
+     </div>
+   </div>
+   
+   <div class="faq-item">
         <h3>Are you really a priest?</h3>
         <div class="faq-answer">
           <p>No. The priest is a character in the story, loosely based on me.</p>
@@ -513,14 +516,7 @@ _and_Personal_Mythology.m4a?rlkey=csg3vru0gx46npnot0fspaxhn&st=7tg7n8um&raw=1" t
    </div>
 
    <div class="faq-item">
-        <h3>What makes this “asshole” approach different from being simply rude or</h3>
-        <div class="faq-answer">
-          <p></p>
-        </div>
-   </div>
-
-   <div class="faq-item">
-        <h3>exploitative?</h3>
+        <h3>What makes this “asshole” approach different from being simply rude or exploitative?</h3>
         <div class="faq-answer">
           <p>It’s theater with a purpose. The priest is a character who cares about the disciples and the ritual. Sometimes that means hurting feelings to keep the higher calling alive. If he doesn’t tend the flame, no one will. But he’s human—maybe he’s wrong. You decide.</p>
         </div>
@@ -541,20 +537,13 @@ _and_Personal_Mythology.m4a?rlkey=csg3vru0gx46npnot0fspaxhn&st=7tg7n8um&raw=1" t
    </div>
 
    <div class="faq-item">
-        <h3>How does the temple maintain balance between being demanding and being</h3>
-        <div class="faq-answer">
-          <p></p>
-        </div>
-   </div>
-
-   <div class="faq-item">
-        <h3>inclusive?</h3>
+        <h3>How does the temple maintain balance between being demanding and being inclusive?</h3>
         <div class="faq-answer">
           <p>It’s open to anyone—but only if they treat it as sacred.</p>
         </div>
    </div>
 
-   <h2>Part 5</h2>
+   <h2>Piano, Music, and the Temple</h2>
       <div class="faq-item">
         <h3>Why is a pianist building a temple and asking for offerings?</h3>
         <div class="faq-answer">
@@ -586,7 +575,7 @@ _and_Personal_Mythology.m4a?rlkey=csg3vru0gx46npnot0fspaxhn&st=7tg7n8um&raw=1" t
    <div class="faq-item">
         <h3>How does your music relate to the temple and its rituals?</h3>
         <div class="faq-answer">
-          <p>*Learn Piano in 5 Days* has been folded into the temple’s framework. Popular piano videos are disappearing, replaced by glitchy temple transmissions to preserve sanctity. _Every Tiny Thing_ is a relic from before the collapse. _You Hold the Key_ is now the temple anthem. _Take Yourself Seriously_ is sacred scripture. Even the blog posts are fragments of old transmissions. Everything’s being templified.</p>
+          <p><i>Learn Piano in 5 Days</i> has been folded into the temple’s framework. Popular piano videos are disappearing, replaced by glitchy temple transmissions to preserve sanctity. <i>Every Tiny Thing</i> is a relic from before the collapse. <i>You Hold the Key</i> is now the temple anthem. <i>Take Yourself Seriously</i> is sacred scripture. Even the blog posts are fragments of old transmissions. Everything’s being templified.</p>
         </div>
    </div>
 
@@ -598,9 +587,16 @@ _and_Personal_Mythology.m4a?rlkey=csg3vru0gx46npnot0fspaxhn&st=7tg7n8um&raw=1" t
    </div>
 
    <div class="faq-item">
+     <h3>How can someone who loves your music relate to the temple?</h3>
+     <div class="faq-answer">
+       <p>Look beneath the music’s surface. The temple is about _process_, not product.</p>
+     </div>
+   </div>
+
+   <div class="faq-item">
         <h3>How does the temple connect with your personal story and values?</h3>
         <div class="faq-answer">
-          <p>The temple _is_ my story. It’s designed for my mind, a place where I don’t have to fight to exist. Maybe it’ll fit yours too.</p>
+          <p>The temple <i>is</i> my story. It’s designed for my mind, a place where I don’t have to fight to exist. Maybe it’ll fit yours too.</p>
         </div>
    </div>
 
@@ -611,12 +607,6 @@ _and_Personal_Mythology.m4a?rlkey=csg3vru0gx46npnot0fspaxhn&st=7tg7n8um&raw=1" t
         </div>
    </div>
 
-   <div class="faq-item">
-        <h3>How can someone who loves your music relate to the temple?</h3>
-        <div class="faq-answer">
-          <p>Look beneath the music’s surface. The temple is about _process_, not product.</p>
-        </div>
-   </div>
 
    <div class="faq-item">
         <h3>Is this temple stuff just a metaphor or something you really believe?</h3>
